@@ -1,6 +1,6 @@
 Package: diffHic
-Version: 1.9.5
-Date: 2017-09-18
+Version: 1.9.6
+Date: 2017-09-21
 Title: Differential Analyis of Hi-C Data
 Author: Aaron Lun <alun@wehi.edu.au>
 Maintainer: Aaron Lun <alun@wehi.edu.au>
