@@ -9,6 +9,7 @@ export(diffHicUsersGuide,
 	loadChromos, loadData, extractPatch,
 	pairParam,
     squareCounts, connectCounts, marginCounts, totalCounts, 
+    mergeCMs,
     correctedContact, normalizeCNV, matchMargins,
     getArea,
 	filterDirect, filterTrended, filterDiag,
